# libsbc

sbc/: AUTHORS  Makefile.am  README  bootstrap  configure.in  sbc.m4  sbc.pc.in
sbc/include/: Makefile.am  sbc.h
sbc/lib/: Makefile.am  sbc.c  sbc_math.h  sbc_tables.h
sbc/src/: Makefile.am  sbcinfo.c
