
AC_INIT()

AM_INIT_AUTOMAKE(sbc, 0.0)
AM_CONFIG_HEADER(config.h)

AM_MAINTAINER_MODE

AC_PREFIX_DEFAULT(/usr)

if (test "${CFLAGS}" = ""); then
	CFLAGS="-Wall -O2"
fi

if (test "${prefix}" = "NONE"); then
	if (test "$mandir" = '${prefix}/man'); then
		AC_SUBST([mandir], ['${prefix}/share/man'])
	fi
fi

AC_LANG_C

AC_PROG_CC
AC_PROG_INSTALL

m4_define([_LT_AC_TAGCONFIG], [])
m4_ifdef([AC_LIBTOOL_TAGS], [AC_LIBTOOL_TAGS([])])

AC_PROG_LIBTOOL

AC_OUTPUT(Makefile include/Makefile lib/Makefile src/Makefile sbc.pc)
